cmake_minimum_required(VERSION 4.0)
project(intro)

# set c++ to standard 20
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(basic src/001_basic/main.cpp)
add_executable(basic_assignment src/001_basic/assignment.cpp)
add_executable(number_system src/002_variables_and_data/number_system.cpp)
add_executable(decimal_integers src/002_variables_and_data/decimal_integers.cpp)
add_executable(integer_modifiers src/002_variables_and_data/integer_modifiers.cpp)
add_executable(fractions src/002_variables_and_data/fractions.cpp)
add_executable(characters_and_text src/002_variables_and_data/characters_and_text.cpp)
add_executable(auto_type_assignments src/002_variables_and_data/auto_type_assignments.cpp)
add_executable(output_formatting src/002_variables_and_data/output_formatting.cpp)
add_executable(numeric_limits src/002_variables_and_data/numeric_limits.cpp)
add_executable(math_functions src/002_variables_and_data/math_functions.cpp)
add_executable(hexagon_area src/002_variables_and_data/hexagon_area.cpp)
add_executable(weird_primitive_types src/002_variables_and_data/weird_primitive_types.cpp)
add_executable(celsius_to_fahrenheit src/002_variables_and_data/celsius_to_fahrenheit.cpp)
add_executable(base_area_and_volume src/002_variables_and_data/base_area_and_volume.cpp)
add_executable(constants src/002_variables_and_data/constants.cpp)
add_executable(type_data_conversion src/002_variables_and_data/type_data_conversion.cpp)
add_executable(overflow_and_underflow src/002_variables_and_data/overflow_and_underflow.cpp)
add_executable(printing_integers_binary src/003_bitwise_operation/printing_integers_binary.cpp)
add_executable(shift_operations src/003_bitwise_operation/shift_operations.cpp)
add_executable(bit_logical_operators src/003_bitwise_operation/logical_operators.cpp)
add_executable(mask_bit src/003_bitwise_operation/mask_bit.cpp)
add_executable(mask_bit_example src/003_bitwise_operation/mask_bit_example.cpp)
add_executable(bit_packing_color_information src/003_bitwise_operation/packing_color_information.cpp)
add_executable(if_statements src/004_flow_control/if_statements.cpp)
add_executable(switch_statements src/004_flow_control/switch_statements.cpp)
add_executable(check_odd_or_even src/004_flow_control/check_odd_or_even.cpp)
add_executable(check_age_assigment src/004_flow_control/check_age_assignment.cpp)
add_executable(day_valid_assignment src/004_flow_control/day_valid_assignment.cpp)
add_executable(day_difference_assignment src/004_flow_control/day_difference_assignment.cpp)
add_executable(location_rectangle_assignment src/004_flow_control/location_rectangle_assignment.cpp)
add_executable(for_loop src/004_flow_control/for_loop.cpp)
add_executable(comma_operator src/002_variables_and_data/comma_operator.cpp)
add_executable(while_loop src/004_flow_control/while_loop.cpp)
add_executable(year_calendar_assignment src/004_flow_control/year_calendar_assignment.cpp)
add_executable(eliminate_duplicate_array src/005_arrays/001_eliminate_duplicates.cpp)
